crates/biome_cli/tests/snapshots/main_commands_lint/lint_error.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint check.js
```

## `check.js`

```js
for(;true;);

```

# Termination Message

```block
lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
check.js:1:6 lint/correctness/noConstantCondition ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × This condition always evaluates to the same value.
  
  > 1 │ for(;true;);
      │      ^^^^
    2 │ 
  
  i Constant conditions make branches and loops harder to reason about because they cannot react to runtime values.
  
  i Replace it with a condition that depends on changing values, or remove the condition if it is intentional.
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
