crates/biome_cli/tests/snapshots/main_commands_lint/lint_invalid_plugin_manifest.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint biome-manifest.json
```

## `biome-manifest.json`

```json
{}
```

# Termination Message

```block
lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
biome-manifest.json:1:1 deserialize ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × The key `version` is missing.
  
  > 1 │ {}
      │ ^^
  

```

```block
biome-manifest.json:1:1 deserialize ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × The Biome manifest must contain at least one rule or configuration.
  
  > 1 │ {}
      │ ^^
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 2 errors.
```
