crates/biome_cli/tests/snapshots/main_commands_lint/lint_only_group_skip_rule.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint --only=suspicious --skip=suspicious/noDebugger check.js
```

## `check.js`

```js
debugger; delete obj.prop; a === -0;
```

# Termination Message

```block
lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
check.js:1:28 lint/suspicious/noUnusedExpressions ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! Expected an assignment or function call but found an expression instead.
  
  > 1 │ debugger; delete obj.prop; a === -0;
      │                            ^^^^^^^^^
  
  i This expression may be unintentionally unused or it might be a function that you forgot to call.
  

```

```block
check.js:1:28 lint/suspicious/noCompareNegZero  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Do not use the === operator to compare against -0.
  
  > 1 │ debugger; delete obj.prop; a === -0;
      │                            ^^^^^^^^
  
  i Safe fix: Replace -0 with 0
  
    1 │ debugger;·delete·obj.prop;·a·===·-0;
      │                                  -  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
Found 1 warning.
```
