crates/biome_cli/tests/snapshots/main_commands_lint/lint_only_group_with_disabled_rule.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint --only=lint/suspicious check.js
```

## `biome.json`

```json
{
  "linter": {
    "rules": {
      "suspicious": {
        "noDebugger": "off"
      }
    }
  }
}
```

## `check.js`

```js

    export function CONSTANT_CASE(){
        debugger;
    }
    
```

# Termination Message

```block
lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
check.js:3:9 lint/suspicious/noDebugger  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × This is an unexpected use of the debugger statement.
  
    2 │     export function CONSTANT_CASE(){
  > 3 │         debugger;
      │         ^^^^^^^^^
    4 │     }
    5 │     
  
  i Unsafe fix: Remove debugger statement
  
    1 1 │   
    2 2 │       export function CONSTANT_CASE(){
    3   │ - ········debugger;
    4 3 │       }
    5 4 │       
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
